@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.11 2002/11/30 14:04:01 grant Exp $
+$NetBSD: distinfo,v 1.12 2002/12/15 19:41:26 cjep Exp $
 
-SHA1 (bison-1.35.tar.bz2) = 083a1f3c153f7358e451a213f0879e98b3aafb1c
-Size (bison-1.35.tar.bz2) = 627723 bytes
+SHA1 (bison-1.75.tar.bz2) = c3aaf4a59b69399e62d0e5c024cc0929dcdd07f6
+Size (bison-1.75.tar.bz2) = 773106 bytes
