@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.794 2002/12/15 17:23:46 jmmv Exp $
+$NetBSD: CHANGES,v 1.795 2002/12/15 19:41:24 cjep Exp $
 
 Changes to the packages collection and infrastructure in 2002:
 
@@ -3961,3 +3961,4 @@ Changes to the packages collection and infrastructure in 2002:
 	Updated smpeg to 0.4.4 [jmmv 2002-12-14]
 	Updated nxtvepg to 2.4.2 [magick 2002-12-14]
 	Updated buildtool to 0.8 [jmmv 2002-12-14]
+	Updated bison to 1.75 [cjep 2002-12-14]
